log
Thu 16 May 2024 05:28:24 PM UTC: 
 tests:  0|5
total_score: 0/70
1ba9f0a
Thu 16 May 2024 05:29:24 PM UTC: 
 sudoku.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:67:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
   67 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
789756d
Thu 16 May 2024 05:41:34 PM UTC: 
 sudoku.c | 44 +++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 43 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:79:66: error: subscripted value is neither array nor pointer nor vector
   79 |             if(submatriz_check[submatriz_fila][submatriz_columna][num-1] == 1){
      |                                                                  ^
sudoku.c:82:63: error: subscripted value is neither array nor pointer nor vector
   82 |             submatriz_check[submatriz_fila][submatriz_columna][num-1];
      |                                                               ^
sudoku.c:60:8: error: variable ‘submatriz_check’ set but not used [-Werror=unused-but-set-variable]
   60 |    int submatriz_check[9][9] = {0};
      |        ^~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
25ee6e2
Thu 16 May 2024 05:42:32 PM UTC: 
 sudoku.c | 17 ++++-------------
 1 file changed, 4 insertions(+), 13 deletions(-)
 tests:  3|4
total_score: 20/70
e5cc5c1
Thu 16 May 2024 05:46:06 PM UTC: 
 sudoku.c | 18 +++++++-----------
 1 file changed, 7 insertions(+), 11 deletions(-)
 tests:  4|3
total_score: 30/70
ba0dac7
Thu 16 May 2024 05:48:43 PM UTC: 
 sudoku.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
 tests:  0|0
0107dc1
Thu 16 May 2024 05:52:28 PM UTC: 
 sudoku.c | 24 +++++++++++++++++-------
 1 file changed, 17 insertions(+), 7 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:110:16: error: unused variable ‘aux2’ [-Werror=unused-variable]
  110 |          Node* aux2 = copy(aux);
      |                ^~~~
sudoku.c:118:1: error: control reaches end of non-void function [-Werror=return-type]
  118 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b514a4d
